SKIE/acceptance-tests/functional/src/test/resources/tests/functions/deprecation/error/enum/wrapper_is_unavailable.swift
# SwiftCompilationError(error: 'foo()' is unavailable: Some error)

A.a1.foo()
